Fix 0.5 pixel shift in chat Fix vertical centering in badges

--- a/src/scss/partials/_chatTopbar.scss
+++ b/src/scss/partials/_chatTopbar.scss
@@ -27,9 +27,6 @@
 	}
 
 	@include respond-to(not-handhelds) {
-		border-left: 1px solid #DADCE0;
-		border-right: 1px solid #DADCE0;
-
 		.menu-search {
 			display: none;
 		}
